--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div id="seconds" class="time">00 <span>сониялар</span></div>
             </div>
             <audio autoplay loop>
-                <source src="./auido.m4a" >
+                <source src="./ihsuigduisd.m4a" >
             </audio>
         </div>
         <script src="script.js"></script>
