--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <header>
                 <h1>Хурматли азиз мехмонимиз!</h1>
                 <p>
-                <div class="top-words">Сизни 2024 йил 14 сентябрь, Шанба куни <br />бўладиган фарзандларимизнинг
-                    "Никоҳ"
-                    <br> тўйлари
+                <div class="top-words">Сизни 2024 йил 14 сентябрь, Шанба куни <br />бўладиган 
+                    "Никоҳ" тўйимиз
+                    <br> 
                     муносабати билан  ёзиладиган<br> нонушта дастурхонига таклиф қиламиз. <br>
                 </div> <span class="bold-p">Ҳурмат ва эҳтром
                     ила</span> <span class="small-p"><br>
